<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.ireribrian.apartments.login">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="225dp"
            android:orientation="vertical"
            android:background="@color/light_blue_500">

            <ImageView
                android:layout_marginTop="20dp"
                android:layout_width="130dp"
                android:src="@drawable/house"
                android:layout_height="130dp"
                android:layout_gravity="center"
                android:contentDescription="@string/loginpic" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ireri_mwenda"
                android:textColor="@color/colorWhite"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:textSize="22sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/keja_app"
                android:layout_gravity="center"
                android:layout_marginTop="2dp"
                android:textColor="@color/colorWhite"
                android:textSize="22sp"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <EditText
                android:id="@+id/regemail"
                android:layout_marginTop="15dp"
                android:layout_width="300dp"
                android:layout_height="45dp"
                android:background="@drawable/edittext"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:drawableStart="@drawable/ic_action_email"
                android:layout_gravity="center"
                android:hint="@string/email"
                tools:layout_editor_absoluteX="84dp"
                tools:layout_editor_absoluteY="131dp" />
            <EditText
                android:id="@+id/pass"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:layout_width="300dp"
                android:layout_height="45dp"
                android:background="@drawable/edittext"
                android:ems="10"
                android:drawableStart="@drawable/ic_action_pass"
                android:hint="@string/password"
                android:inputType="textPassword"
                tools:layout_editor_absoluteX="84dp"
                tools:layout_editor_absoluteY="244dp" />

            <android.support.v7.widget.CardView
                android:layout_width="300dp"
                android:layout_height="45dp"
                android:layout_marginTop="30dp"
                android:layout_gravity="center"
                app:cardBackgroundColor="@color/colorAccent"
                app:cardCornerRadius="25dp"
                app:cardElevation="10dp"
                android:id="@+id/cardView" >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/signupText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/login"
                        android:textColor="#fff"
                        android:textSize="18sp"/>
                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <TextView
                android:id="@+id/signtext"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:layout_marginTop="38dp"
                android:text="@string/register_account"
                android:textColor="@color/authui_colorPrimary"
                android:textSize="18sp" />

        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
