<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context="com.example.ireribrian.apartments.register">

    <EditText
        android:id="@+id/fname"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:background="@drawable/edittext"
        android:drawableStart="@drawable/ic_action_first"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="58dp"
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="84dp"
        tools:layout_editor_absoluteY="26dp" />

    <EditText
        android:id="@+id/lname"
        android:layout_marginTop="8dp"
        android:layout_below="@+id/fname"
        android:layout_alignStart="@+id/fname"
        android:drawableStart="@drawable/ic_action_first"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:background="@drawable/edittext"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/last_name"
        tools:layout_editor_absoluteX="84dp"
        tools:layout_editor_absoluteY="78dp" />

    <EditText
        android:id="@+id/regemail"
        android:layout_marginTop="8dp"
        android:layout_below="@+id/lname"
        android:layout_alignStart="@+id/lname"
        android:drawableStart="@drawable/ic_action_email"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:background="@drawable/edittext"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        tools:layout_editor_absoluteX="84dp"
        tools:layout_editor_absoluteY="131dp" />

    <EditText
        android:id="@+id/usernm"
        android:layout_marginTop="8dp"
        android:layout_below="@+id/regemail"
        android:layout_alignStart="@+id/regemail"
        android:drawableStart="@drawable/ic_action_first"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:background="@drawable/edittext"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="Username"
        tools:layout_editor_absoluteX="84dp"
        tools:layout_editor_absoluteY="187" />

    <EditText
        android:id="@+id/pass"
        android:layout_marginTop="8dp"
        android:layout_width="300dp"
        android:drawableStart="@drawable/ic_action_pass"
        android:layout_height="45dp"
        android:background="@drawable/edittext"
        android:ems="10"
        android:layout_alignStart="@+id/usernm"
        android:layout_below="@+id/usernm"
        android:hint="@string/password"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="84dp"
        tools:layout_editor_absoluteY="244dp" />

    <android.support.v7.widget.CardView
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_below="@+id/pass"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="47dp"
        app:cardBackgroundColor="@color/colorAccent"
        app:cardCornerRadius="25dp"
        app:cardElevation="10dp"
        android:id="@+id/cardView" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/signupText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/register"
                android:textColor="#fff"
                android:textSize="18sp"/>
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/logtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cardView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp"
        android:text="@string/already_have_an_account_login"
        android:textColor="@color/authui_colorPrimary"
        android:textSize="18sp" />
</RelativeLayout>
